extract compiler module